@@ -490,20 +490,17 @@ def get_submit_info(path):
     if not os.path.isdir(os.path.join(path, ".svn")):
         raise Error, "subversion directory not found"
     
-    svn = SVN(baseurl=pkgdirurl)
-
+    svn = SVN(noauth=True)
 
     # Now, extract the package name.
-    for line in svn.info(path):
-        if line.startswith("URL: "):
-            url = line.split()[1]
-            toks = url.split("/")
-            if len(toks) < 2 or toks[-1] != "current":
-                raise Error, "unexpected URL received from 'svn info'"
-            name = toks[-2]
-            break
-    else:
-        raise Error, "URL tag not found in 'svn info' output"
+    info = svn.info2(path)
+    url = info.get("URL")
+    if url is None:
+        raise Error, "missing URL from svn info %s" % path
+    toks = url.split("/")
+    if len(toks) < 2 or toks[-1] != "current":
+        raise Error, "unexpected URL received from 'svn info'"
+    name = toks[-2]
 
     # Finally, guess revision.
     max = -1
@@ -511,8 +508,8 @@ def get_submit_info(path):
     files.extend(glob.glob("%s/*" % specsdir))
     files.extend(glob.glob("%s/*" % sourcesdir))
     for line in svn.info(" ".join(files)):
-        if line.startswith("Revision: "):
-            rev = int(line.split()[1])
+        if line.startswith("Last Changed Rev: "):
+            rev = int(line.split(":")[1])
             if rev > max:
                 max = rev
     if max == -1:
